added updates for images and broken out into blocks

--- a/src/components/BlockList/Block/Block.module.css
+++ b/src/components/BlockList/Block/Block.module.css
@@ -2,10 +2,8 @@
     Homepage blocks
 */
 .block {
-  display: flex;
-  flex-direction: column;
-  background-size: cover;
-  background-position: center center;
+  position: relative;
+  overflow: hidden;
 }
 
 /*
